# rgpt

./: .gitignore  Cargo.toml  README.md
crates/assistant/: Cargo.toml
crates/assistant/src/: config.rs  error.rs  lib.rs  pagetree.rs  query.rs  session.rs  textarea.rs
crates/caller/: Cargo.toml
crates/caller/src/: client.rs  error.rs
crates/cli/: Cargo.toml
crates/cli/src/: error.rs  main.rs
crates/provider/: Cargo.toml
crates/provider/src/: api_key.rs  builder.rs  error.rs  lib.rs
crates/provider/src/anthropic/: api_key.rs  config.rs  error.rs  mod.rs  provider.rs  types.rs
crates/providers/: Cargo.toml
crates/providers/src/anthropic/: error.rs  mod.rs  provider.rs  types.rs
crates/state/: Cargo.toml
crates/state/src/: lib.rs
crates/types/: Cargo.toml
crates/types/src/: completion.rs  message.rs
crates/utils/: Cargo.toml
crates/utils/src/: lib.rs  logging.rs  macros.rs  stream.rs
