[workspace]
resolver = "2"
name = "rgpt"
members = ["crates/*"]

[workspace.package]
name = "rgpt"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/rubenduburck/rgpt"

[workspace.dependencies]
rgpt-types = { path = "crates/types" }
rgpt-caller = { path = "crates/caller" }

# Logging
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
tracing-test = "0.2.5"

# Cli
clap = "4.5.16"

