[workspace]
resolver = "2"
name = "rgpt"
members = ["crates/*"]

[workspace.package]
name = "rgpt"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/rubenduburck/rgpt"

[workspace.dependencies]
rgpt-types = { path = "crates/types" }
rgpt-caller = { path = "crates/caller" }
rgpt-utils = { path = "crates/utils" }
rgpt-provider = { path = "crates/provider" }
rgpt-assistant = { path = "crates/assistant" }

# Logging
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
tracing-test = { version = "0.2.5", features = ["no-env-filter"] }

clap = { version = "4.5.16", features = ["derive"] }
tokio = { version = "1.39.3", features = ["full"] }
tokio-stream = "0.1.0"
thiserror = "1.0.63"
ctrlc = "3.4.5"
lazy_static = "1.5.0"
serde = { version = "1.0.209", features = ["derive"] }
serde_json = "1.0.127"
crossterm = "0.28.1"
dialoguer = "0.11.0"
reqwest = "0.12.7"
reqwest-eventsource = "0.6.0"
rustc_version = "0.4.0"
backoff = "0.4.0"
pin-project-lite = "0.2.14"
