[package]
name = "rgpt-assistant"
version = "0.1.0"
edition = "2021"

[dependencies]
rgpt-types = { workspace = true }
rgpt-provider = { workspace = true }

lazy_static = "1.5.0"
serde = { version = "1.0.209", features = ["derive"] }
serde_json = "1.0.127"
thiserror = "1.0.63"
tokio = { version = "1.16.1", features = ["full"] }
tokio-stream = "0.1.0"
tracing = "0.1.40"
tracing-test = { version = "0.2.5", features = ["no-env-filter"] }
