[package]
name = "rgpt-assistant"
version = "0.1.0"
edition = "2021"

[dependencies]
rgpt-types = { workspace = true }
rgpt-provider = { workspace = true }
rgpt-state = { workspace = true }
rgpt-utils = { workspace = true }

serde = { workspace = true, features = ["derive"] }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tokio-stream = { workspace = true }
tracing ={ workspace = true } 
tracing-test = { workspace = true, features = ["no-env-filter"] }
dialoguer = { workspace = true } 
ratatui = "0.28.1" # tui-rs is no longer maintained
tui-textarea = { version = "0.6.1", features = ["ratatui", "crossterm"] } # TODO: use this
crossterm = { version = "0.28.1", features = ["event-stream"] }
futures = { version = "0.3.30", features = ["compat"] }
