[package]
name = "rgpt-caller"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { workspace = true}
serde = { workspace = true, features = ["derive"] }
tokio = { workspace = true, features = ["full"] }
serde_json = { workspace = true}
tokio-stream = { workspace = true}
reqwest-eventsource = { workspace = true}
thiserror = { workspace = true}
backoff = { workspace = true, features = ["tokio"], default-features = false }
tracing = { workspace = true}
