[package]
name = "rgpt-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
rgpt-types = { workspace = true }
rgpt-utils = { workspace = true }
rgpt-assistant = { workspace = true }

tracing = "0.1.25"
tracing-test = "0.2.5"

clap = { version = "4.5.16", features = ["derive"] }
tokio = { version = "1.39.3", features = ["full"] }
thiserror = "1.0.63"
