[package]
name = "rgpt-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
rgpt-types = { workspace = true }
rgpt-utils = { workspace = true }
rgpt-assistant = { workspace = true }

tracing = { workspace = true}

clap = { workspace = true, features = ["derive"] }
tokio = { workspace = true, features = ["full"] }

thiserror = { workspace = true }
ctrlc = { workspace = true}
