[package]
name = "rgpt-provider"
version = "0.1.0"
edition = "2021"

[dependencies]
rgpt-types = { workspace = true }
rgpt-caller = { workspace = true }
rgpt-utils = { workspace = true }

reqwest = { workspace = true}
serde = { workspace = true, features = ["derive"] }
tokio = { workspace = true, features = ["full"] }
serde_json = { workspace = true}
tokio-stream = { workspace = true}
reqwest-eventsource = { workspace = true}
thiserror = { workspace = true}
tracing = { workspace = true}
lazy_static = { workspace = true}
rustc_version = { workspace = true}
